* global font-size, switch pixel references to ems * fix up css spacing

--- a/meteor-app/client/stylesheets/base.scss
+++ b/meteor-app/client/stylesheets/base.scss
@@ -4,9 +4,7 @@
 
 $bg_color: #e7e4e4;
 
-
-* { box-sizing: border-box;}
-
+* { box-sizing: border-box; font-size: 16px; }
 
 body {
   background: $bg_color;
@@ -16,5 +14,5 @@ body {
   position:relative;
 }
 
-strong { font-family:'ChaparralPro-Semibold', sans-serif;}
+strong { font-family:'ChaparralPro-Semibold', sans-serif; }
 
