--- a/meteor-app/client/stylesheets/forms.scss
+++ b/meteor-app/client/stylesheets/forms.scss
@@ -1,6 +1,6 @@
 // from https://stackoverflow.com/questions/11816166/android-ics-like-input-field-in-css
 input[type='text'] {
-    padding: 8px 8px 6px 8px;
+    padding: 1em;
     outline: none;
     border: none;
     background: bottom left linear-gradient(gray, gray) no-repeat, bottom center linear-gradient(gray, gray) repeat-x, bottom right linear-gradient(gray, gray) no-repeat;
