--- a/meteor-app/client/stylesheets/zelda.scss
+++ b/meteor-app/client/stylesheets/zelda.scss
@@ -2,16 +2,12 @@
 // adapated code from   : http://codepen.io/vdaguenet/pen/Ebycz
 
 $line-size: 1px;
-
 $color-init: #F9D423;
 $color-first: #FE4365;
 $color-second: #C7F464;
 
 html { height: 100%; }
-
-body {
-	height: 100%;
-}
+body { height: 100%; }
 
 .wipe {
 	position: absolute;
@@ -37,7 +33,6 @@ body {
 .wipe.top-to-bottom .line	{ background: $color-first; }
 .wipe.side-to-side .line 	{ background: $color-second; }
 
-
 .wipe.load.top-to-bottom .mask {
 	width: 100%;
 	height: calc(50% - #{ $line-size });
@@ -46,7 +41,6 @@ body {
 	&.top 		{ top: 0; }
 	&.bottom 	{ bottom: 0; }
 }
-
 
 .wipe.side-to-side .mask {
 	height: 100%;
@@ -69,4 +63,3 @@ body {
 	width: calc(50%) !important; // overwrite the line in the middle, not needed here
 	background: #222;
 }
-
